# workflow-x11

./: README.md  stack.yaml  workflow-backends-x11.cabal  workflow-x11.cabal
executables/: Main.hs
sources/: Commands.hs
sources/Commands/: Example.hs  Extra.hs  Types.hs
sources/Workflow/Backends/: X11.hs
sources/Workflow/Backends/X11/: Bindings.hs  Example.hs  Extra.hs
tests/: DocTest.hs
tests/Commands/: Test.hs
